added create and update opportunity

--- a/src/style.css
+++ b/src/style.css
@@ -146,7 +146,7 @@ h1 {
   padding: 3em;
 }
 
-input[type="text"], input[type="email"], input[type="password"], input[type="tel"] {
+input[type="text"], input[type="email"], input[type="password"], input[type="tel"], input[type="number"] {
   font-size: 0.9em;
   color: #fff;
   font-weight: 100;
